fixed spacing problem

--- a/Landing/styleOrganization.css
+++ b/Landing/styleOrganization.css
@@ -86,7 +86,6 @@ body{
 h3{
   width: 100%;
   padding: 5px;
-  padding-top: 20%;
   text-align: center;
   font-size: 1vw;
 }
